clusters/default/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  namepsace: default
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
