clusters/default/ryanschnabel-com-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-nginx-prod
  namespace: default
spec:
  selector:
    matchLabels:
      app: welcome-nginx-prod
  replicas: 1
  template:
    metadata:
      labels:
        app: welcome-nginx-prod
    spec:
      containers:
        - image: schniebel/welcome-page:{TAG}
          name: welcome-nginx-prod
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
       - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: welcome-nginx-svc-prod
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: welcome-nginx-prod
